# sharedMemoryLib

./: .gitignore  CMakeLists.txt  FILE_OVERVIEW.md  Makefile  QUICK_REFERENCE.md  README.md  example_service.cpp  example_simple_reader.cpp  shared_memory_json.hpp  test_suite
docs/: USAGE_GUIDE.md
examples/: example_controller.cpp  example_monitor.cpp  example_reader.cpp  example_writer.cpp
include/: shared_memory_json.hpp
tests/: test_suite.cpp
